--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "framer-motion": "^12.23.12",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
@@ -21,9 +24,12 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "clsx": "^2.1.1",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
+    "lucide-react": "^0.462.0",
     "postcss": "^8.5.6",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "^4.1.12",
     "typescript": "^5"
   }
